--- a/requirements.txt
+++ b/requirements.txt
@@ -141,7 +141,7 @@ stack-data==0.6.3
 starlette==0.46.2
 streamlit==1.45.1
 streamlit-authenticator==0.4.2
-streamlit-extras==0.7.5
+streamlit-extras
 streamlit-oauth==0.1.14
 tenacity==9.1.2
 tiktoken==0.9.0
